created a landing page for Sugarizer which also contains some download links for Sugarizer app

--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-s<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Sugar labs Landing Page</title>
-	<!--<link rel="stylesheet" href="D:\Getting Started with BOOTSTRAP\Bootstrap4\css\bootstrap.css">
-	<link rel="stylesheet" href="D:\Getting Started with BOOTSTRAP\Bootstrap4\css\bootstrap.min.css">
-	<link rel="stylesheet" href="D:\Getting Started with BOOTSTRAP\Bootstrap4\css\bootstrap-grid-min.css">
-	<link rel="stylesheet" href="D:\Getting Started with BOOTSTRAP\Bootstrap4\css\bootstrap-reboot.css">
-	<link rel="stylesheet" href="D:\Getting Started with BOOTSTRAP\Bootstrap4\css\bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="D:\Getting Started with BOOTSTRAP\Bootstrap4\css\special bs.css">-->
+	<title>Sugarizer Landing Page</title>
+
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -22,10 +17,6 @@ s<!DOCTYPE html>
 </head>
 <body>
 
-
-<!--
-	<img src="iphone-banner.png">
--->
 <nav class="nav-bar navbar-fixed-top">
 	<ul>
 		<li><a href="https://sugarizer.org/">Download</a></li>
