created a landing page for Sugarizer which also contains some download links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="index.css">
 
@@ -17,25 +18,25 @@
 </head>
 <body>
 
-<nav class="nav-bar navbar-fixed-top">
+<nav class="navbar fixed-top navbar-light">
 	<ul>
-		<li><a href="https://sugarizer.org/">Download</a></li>
-		<li><a href="https://sugarlabs.org/about-us/">About</a></li>
 		<li><a href="https://sugarlabs.org/">Home</a></li>
+		<li><a href="https://sugarlabs.org/about-us/">About</a></li>
+		<li><a href="https://sugarizer.org/">Download</a></li>
 	</ul>
 </nav>
 
 <div class="container-fluid" id="landing_page"> 
 	<div class="row">
 		<div class="col-md-6" id="sub-header">
-			<h1 style="">SUGARIZER PRIMERO</h1><br>
+			<h1 style="color: #555">SUGARIZER PRIMERO</h1><br>
 			<div class="row">
 				<div class="col-sm-6"><a href="https://play.google.com/store/apps/details?id=org.olpc_france.sugarizer"><img src="download.png" width="200"></a></div>
 				<div class="col-sm-6"><a href="https://itunes.apple.com/us/app/sugarizer/id978495303"><img src="images.png" width="200"></a></div>
 			</div>
-			<div class="row">
+			
 				<a href="https://sugarizer.org/"><button class="btn btn-info">MORE DOWNLOAD LINKS</button></a>
-			</div>
+			
 
 		</div>
 		<div class="col-md-6" id="image">
@@ -68,31 +69,40 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h3 class="text-center">Web App</h3>
-			<a href="#">
 				<img style="padding-top: 12%" src="screenshot.png"  width="600" height="400">
-			</a>
 		</div>
 		<div class="col-md-4" style="padding-left: 15%">
 			<h3 class="text-center">Mobile App</h3>
-			<a href="#" >
 				<img src="i-phone-screen.png" alt="jmd founder" width="292" height="499">
-			</a>
 		</div>
 		
 	</div>
 </div>	
 
+<div class="footer">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-6">
+				<p>Sugarizer is an open source software under <a href="http://www.apache.org/licenses/LICENSE-2.0"> Apache 2 licence</a>, source code is available on GitHub <a href="https://github.com/llaske/sugarizer"> here</a>. Most activities use this license too but some could use a different license, check activities credits to be sure.</p>
+
+				<p>&copy 2013-2018, Lionel Laské, <a href="https://github.com/llaske/sugarizer"> Sugar Labs Inc</a>. and Contributors.</p>
+
+				<a class="icon" target="_blank" href="https://www.facebook.com/Sugarizer"> <i class="fab fa-facebook-square fa-3x icon"></i> </a>       <a class="icon" target="_blank" href="https://twitter.com/sugarizerapp"> <i class="fab fa-twitter-square fa-3x icon"></i></a>
+			</div>
+
+			<div class="col-md-6">
+				<p>Original page design by: <a href="https://piotr-antosz.pl/"> Piotr Antosz</a></p>
+
+				<p>Image credits: Play by P.J. Onori from the Noun Project, Responsive Design by Benni from the Noun Project, Server image by aLf from the Noun Project, Cloud by Dmitry Baranovskiy from the Noun Project, Tablet by Konstantin Velichko from the Noun Project.</p>
+			</div>
+	</div>
+	</div>
+</div>
+	
+
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-<!--<script type="text/javascript" src="sugar.js"></script>
-
-<script type="text/javascript" src="D:\Getting Started with BOOTSTRAP\Bootstrap4\js\bootstrap.bundle.js"></script>	
-<script type="text/javascript" src="D:\Getting Started with BOOTSTRAP\Bootstrap4\js\bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="D:\Getting Started with BOOTSTRAP\Bootstrap4\js\bootstrap.js"></script>
-<script type="text/javascript" src="D:\Getting Started with BOOTSTRAP\Bootstrap4\js\bootstrap.min.js"></script>
-<script type="text/javascript" src="D:\Getting Started with BOOTSTRAP\Bootstrap4\js\special bs js.js"></script>-->
 
 </body>
 </html>
