Created a landing page for sugarizer app

--- a/index.html
+++ b/index.html
@@ -64,19 +64,23 @@
 	</div>
 </div>
 	
-<div class="container-fluid screenshots" >
+<div class="container-fluid web-app" >
 	<h2 class="text-center">Sugarizer App Screenshots</h2>
-	<div class="row">
+	<h3 class="text-center">Web App</h3>
+	<div class="row screenshot-row">
 		<div class="col-md-6">
-			<h3 class="text-center">Web App</h3>
-				<img style="padding-top: 12%" src="screenshot.png"  width="600" height="400">
+				<img src="screenshot.png" width="850.66px">
 		</div>
-		<div class="col-md-4" style="padding-left: 15%">
-			<h3 class="text-center">Mobile App</h3>
-				<img src="i-phone-screen.png" alt="jmd founder" width="292" height="499">
+	</div>	
+</div>
+
+<div class="container-fluid mobile-app">
+	<h3 class="text-center">Mobile App</h3>
+	<div class="row">
+		<div class="col-md-12">
+			<img width="850.66" src="https://sugarizer.org/img/sugar_animation.gif">
 		</div>
-		
-	</div>
+	</div> 
 </div>	
 
 <div class="footer">
