Created a landing page for Sugarizer.io

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		</div>
 		<div class="col-md-6" id="image">
-			<img src="iphone-banner.png" width="310" height="510">
+			<img src="iphone-banner-phone.png" width="310" height="510">
 		</div>
 	</div>
 </div>
