Created a landing page for Sugarizer App

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 
 <div class="container-fluid" id="landing_page"> 
 	<div class="row">
-		<div class="col-md-6" id="sub-header">
+		<div class="col-sm-7" id="sub-header">
 			<h1 style="color: #555">SUGARIZER PRIMERO</h1><br>
 			<div class="row">
 				<div class="col-sm-6"><a href="https://play.google.com/store/apps/details?id=org.olpc_france.sugarizer"><img src="download.png" width="200"></a></div>
-				<div class="col-sm-6"><a href="https://itunes.apple.com/us/app/sugarizer/id978495303"><img src="images.png" width="200"></a></div>
+				<div class="col-sm-6"><a href="https://chrome.google.com/webstore/detail/sugarizer/omfgclgehghdlloggibhgicnlldjiboo"><img src="chromestore.png" width="205.5" style="padding-top: 5%"></a></div>
 			</div>
 			
 				<a href="https://sugarizer.org/"><button class="btn btn-info">MORE DOWNLOAD LINKS</button></a>
 			
 
 		</div>
-		<div class="col-md-6" id="image">
-			<img src="iphone-banner-phone.png" width="310" height="510">
+		<div class="col-sm-4" id="image">
+			<img src="iphone-banner-phone.png" width="100%">
 		</div>
 	</div>
 </div>
@@ -66,23 +66,34 @@
 	
 <div class="container-fluid web-app" >
 	<h2 class="text-center">Sugarizer App Screenshots</h2>
-	<h3 class="text-center">Web App</h3>
 	<div class="row screenshot-row">
-		<div class="col-md-6">
-				<img src="screenshot.png" width="850.66px">
+		<div class="col-sm-7">
+			<h3 class="text-center">Web App</h3>
+				<img src="screenshot.png" width="100%"><hr>
+
+				<div class="row" style="margin-top: 5%">
+					<div class="col-md-12">
+						<img width="100%" src="https://sugarizer.org/img/sugar_animation.gif">
+					</div>
+				</div>
+		</div>
+
+		<div class="col-sm-5">
+			<h3 class="text-center">Mobile App</h3>
+				<img src="i-phone-screen.png" width="100%"> 
 		</div>
 	</div>	
 </div>
 
-<div class="container-fluid mobile-app">
+<!--<div class="container-fluid mobile-app">
 	<h3 class="text-center">Mobile App</h3>
 	<div class="row">
 		<div class="col-md-12">
-			<img width="850.66" src="https://sugarizer.org/img/sugar_animation.gif">
+			<img width="50%" src="https://sugarizer.org/img/sugar_animation.gif"> width="850.66"
 		</div>
 	</div> 
 </div>	
-
+-->
 <div class="footer">
 	<div class="container-fluid">
 		<div class="row">
