Created a landing page for Sugarizer App

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		<div class="col-sm-7" id="sub-header">
 			<h1 style="color: #555">SUGARIZER PRIMERO</h1><br>
 			<div class="row">
-				<div class="col-sm-6"><a href="https://play.google.com/store/apps/details?id=org.olpc_france.sugarizer"><img src="download.png" width="200"></a></div>
-				<div class="col-sm-6"><a href="https://chrome.google.com/webstore/detail/sugarizer/omfgclgehghdlloggibhgicnlldjiboo"><img src="chromestore.png" width="205.5" style="padding-top: 5%"></a></div>
+				<div class="col-sm-6"><a target="_blank" href="https://play.google.com/apps/testing/com.sugars.primero1"><img src="download.png" width="200"></a></div>
+				<div class="col-sm-6"><a href="http://iqragsoc.com/iqragsoc.com/primero1/index1.html"><img src="webapp.png" width="205.5" style="padding-top: 5%"></a></div>
 			</div>
 			
 				<a href="https://sugarizer.org/"><button class="btn btn-info">MORE DOWNLOAD LINKS</button></a>
